# RBMN-Storyboard_App

./: .env.example  .gitignore  AUDIT_2026-05-31.md  AUDIT_2026-06-17.md  AUDIT_BATCH_2026-05-31.md  BLUEPRINT_CHAPTERS_v1.md  CHANGELOG.md  Download Models.bat  README.md  Run_Browser_Mode.bat  audio_diag.md  chapters.md  fix-pytorch-cuda.bat  install.bat  package-lock.json  pyproject.toml  requirements.txt  run.bat  run.py  timeline_diag.md
backend/: config.py  main.py
backend/api/: __init__.py  (+18 more)
docs/: IDEOGRAM_JSON_PROMPT_MODE.md  KREA2_GUIDE.md  LTX_DIRECTOR_MODE.md  MODEL_PROMPTING.md  TIMELINE_EDITING.md  camera_shot_reference.html
frontend/: .gitignore  ARCHITECTURE.md  README.md  SETUP.md  index.html  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
tools/: diag.py  diag_audio.py  diag_chapters.py  diag_krea2.py  diag_timeline.py  reset_chapters.py
workflows/: KLEIN_EDIT_ULTRA_WORKFLOW_1REF.json  KLEIN_EDIT_ULTRA_WORKFLOW_2REF.json  KLEIN_EDIT_ULTRA_WORKFLOW_3REF.json  KLEIN_EDIT_ULTRA_WORKFLOW_4REF.json  KLEIN_EDIT_ULTRA_WORKFLOW_5REF.json  KLEIN_EDIT_ULTRA_WORKFLOW_Text2Image.json  KLEIN_INPAINT.json  KREA2_IDEOGRAM_T2I.json  KREA2_IDEOGRAM_T2I_NSFW.json  KREA2_TURBO_T2I.json  KREA2_TURBO_T2I_NSFW.json  LTX-2-3_AV_NATIVE.json  LTX-2-3_TRANSITION_LORA.json  LTX-2-3_ULTRA_WORKFLOW_FF_LF.json  LTX-2-3_ULTRA_WORKFLOW_Image2Video.json  LTX-2-3_V2V_EXTEND.json  LTX-2-3_V2V_EXTEND_v2.json  LTX-2-3_V2V_EXTEND_v2_pass1.json  LTX-2-3_V2V_EXTEND_v2_pass2.json  LTX_DIRECTOR.json  LTX_DIRECTOR_HQ.json  LTX_SEQ_FFLF.json  LTX_SEQ_I2V.json  LTX_SEQ_V2V.json  ZIMAGE_TURBO_T2I.json  whisper_audio_transcription_workflow.json  (+1 more)
(+99 files in other folders)
