[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rbmn-storyboard"
version = "1.8.31"
description = "AI Music Video & Narration Video Storyboard Application"
requires-python = ">=3.10,<3.13"
dependencies = [
    # Web framework
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "websockets>=13",
    "sse-starlette>=2.0",
    "python-multipart>=0.0.9",

    # Desktop wrapper
    "pywebview>=5.3",

    # Database
    "sqlmodel>=0.0.22",
    "sqlalchemy>=2.0.36",
    "alembic>=1.14",
    "aiosqlite>=0.20",

    # Audio analysis
    "demucs>=4.0.1",
    "whisperx>=3.8.5",
    "allin1>=1.1.0",
    "soundfile>=0.12",
    "librosa>=0.10",

    # Whisper-WebUI (Gradio) client
    "gradio_client>=1.3",

    # ComfyUI client
    "requests>=2.31",
    "websocket-client>=1.7",
    "aiohttp>=3.9",
    "tenacity>=8.2",

    # LLM integrations
    "openai>=1.30",
    "anthropic>=0.25",
    "google-generativeai>=0.5",

    # Video processing
    "numpy>=1.26",
    "Pillow>=10.2",

    # Utilities
    "pydantic>=2.9",
    "pydantic-settings>=2.2",
    "python-dotenv>=1.0",
    "aiofiles>=23.2",

    # Cloud GPU (RunPod)
    "runpod>=1.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "ruff>=0.3",
]

[project.scripts]
rbmn = "backend.main:run_app"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.setuptools.packages.find]
include = ["backend*"]
